--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "url": "https://github.com/adobe/aem-boilerplate/issues"
   },
   "homepage": "https://github.com/adobe/aem-boilerplate#readme",
+  "dependencies": {
+    "@adobe/aio-sdk": "^3.0.0",
+    "node-fetch": "^2.6.0"
+  },
   "devDependencies": {
     "@babel/eslint-parser": "7.25.1",
     "eslint": "8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.29.1",
     "stylelint": "16.8.2",
-    "stylelint-config-standard": "36.0.1"
+    "stylelint-config-standard": "36.0.1",
+    "@openwhisk/wskdebug": "^1.3.0"
   }
 }
