--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
   "homepage": "https://github.com/adobe/aem-boilerplate#readme",
   "dependencies": {
     "@adobe/aio-sdk": "^3.0.0",
-    "node-fetch": "^2.6.0"
+    "adm-zip": "^0.5.16",
+    "fast-xml-parser": "^4.5.0",
+    "node-fetch": "^2.6.0",
+    "node-html-parser": "^6.1.13"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.25.1",
+    "@openwhisk/wskdebug": "^1.3.0",
     "eslint": "8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.29.1",
     "stylelint": "16.8.2",
-    "stylelint-config-standard": "36.0.1",
-    "@openwhisk/wskdebug": "^1.3.0"
+    "stylelint-config-standard": "36.0.1"
   }
 }
